End of Section 6

--- a/DatingApp/tsconfig.json
+++ b/DatingApp/tsconfig.json
@@ -13,5 +13,11 @@
     {
       "path": "./tsconfig.spec.json"
     }
-]
+  ],
+  "compilerOptions": {
+    "typeRoots": [
+      "node_modules/@types",
+      "src/typings.d.ts"
+    ]
+  }
 }
