End of Section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "Cloud": "dp9cvpnvw",
+    "ApiKey": "827573369192533",
+    "ApiSecret": "Flu_Dh5pEKEOvYSmeAhMt6OGO70"
+  }
 }
