--- a/DatingApp/package.json
+++ b/DatingApp/package.json
@@ -29,6 +29,7 @@
     "ngx-bootstrap": "^5.6.1",
     "ngx-gallery": "^5.10.0",
     "rxjs": "~6.5.5",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
